# python-dev-template

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
configs/: .env.example
pre_commit_hooks/: auto_env_example.py
somefile/: script.py
