[tool.poetry]
name = "4u-dev-template"
version = "0.1.0"
description = "Template for 4U developers"
authors = ["wannawhat"]
readme = "README.md"
packages = [{include = "4u_dev_template"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
rich = "^13.4.1"
pre-commit = "^3.3.2"
isort = "^5.12.0"
autoflake = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 9
line_length = 88
group_by_package = true


[tool.autoflake]
in-place = true
remove-all-unused-imports = true
recursive = true